# libflypdf

./: AUTHORS  Makefile.am  README  README.md  configure.ac  flypdf.sln  libflypdf.pc.in
CExamples/: CExamples.vcproj
CSharpExamples/: CSharpExamples.csproj  Example1.cs  Example10.cs  Example2.cs  Example3.cs  Example4.cs  Example5.cs  Example6.cs  Example7.cs  Example8.cs  Example9.cs  Program.cs
CSharpExamples/Properties/: AssemblyInfo.cs
CppExamples/: CppExamples.vcproj
debian/: changelog  control  copyright  rules
debian/patches/: 00-dist-packages-install.patch  001_distdir_python_install.patch
docs/: DOCUMENTATION  docs-print.css  docs.css  docs.js  flypdf.html
flypdf/: flypdf.vcproj
flypdf_c/: flypdf_c.vcproj
flypdf_sharp/: Makefile.am  flypdf.cs  flypdf_sharp.csproj  libflypdf-sharp.pc.in
flypdf_sharp/Properties/: AssemblyInfo.cs
src/: Makefile.am  flypdf.cpp  flypdf.h  flypdf.i  flypdf_c.cpp  flypdf_c.h  fonts.cpp  fonts.h  fonts_test.cpp  images.cpp  images.h  jpegsize.cpp  test.cpp  test_c.c  truetype.cpp  truetype.h  ttreduction.cpp  unicode.cpp
src/examples/: tut1.py  tut10.py  tut2.py  tut3.py  tut4.py  tut5.py  tut6.py  tut7.py  tut8.py  tut9.py
